issue-104: footer stuck to the bottom of a viewport

--- a/blocks/common/page/page.css
+++ b/blocks/common/page/page.css
@@ -2,6 +2,10 @@
 {
     font: 16px/2 'Open Sans', Arial, sans-serif;
 
+    display: flex;
+    flex-direction: column;
+
+    min-height: 100vh;
     margin: 0;
 }
 
